Bug 1555236 - Properly align TP toggle switch with the rest of the panel. r=johannh
Differential Revision: https://phabricator.services.mozilla.com/D34517

--- a/browser/themes/shared/controlcenter/panel.inc.css
+++ b/browser/themes/shared/controlcenter/panel.inc.css
@@ -859,7 +859,6 @@ description#identity-popup-content-verifier,
   margin-top: 4px;
   margin-bottom: 4px;
   margin-inline-start: 1px;
-  margin-inline-end: 7px;
   padding: 2px;
   padding-inline-end: 0;
   transition: padding .2s ease;
